scss/_nav.scss
// Nav

.nav {
    .nav--utility,
    .nav--main {
        .has-child-menu {
            position: relative;

            > a:after {
                content: '\f0d7';
                font-family: 'FontAwesome';
                font-size: 0.8rem;
                padding-left: 0.5rem;
            }
        }
    }
}

.nav--desktop {
    .nav--utility,
    .nav--main {
        display: table;
        width: 100%;
        margin: 0;
        text-align: center;

        > li {
            display: table-cell;
            vertical-align: middle;
        }

        .has-child-menu {
            position: relative;
        }
    }

    .child-menu {
        position: absolute;
        top: 100%;
        left: 0;
        margin: 0;
        padding: 0;
        min-width: 100%;
        text-align: left;
        list-style: none;
        background: $white;
        z-index: 99;
        visibility: hidden;
        opacity: 0;
        transform: translateY(10px);
        transition: 0.3s ease-in-out;

        li {
            margin: 0;
            white-space: nowrap;
        }

        a {
            display: block;
            padding: 0.5rem 1rem;
            color: $primary-dark;
            transition: 0.3s ease-in-out;

            &:hover {
                background: $gray-ultralight;
            }
        }

        &.open {
            visibility: visible;
            opacity: 1;
            transform: translateY(0);
        }
    }

    .nav--utility {
    }
}

.nav--mobile {
    display: none;

    a {
        color: $white;
    }

    .nav--utility,
    .nav--main {
        li {
            margin: 0;
        }

        a {
            display: block;
            padding: 0.5rem 1rem;
        }
    }

    .child-menu {
        display: none;
        list-style: none;
        margin: 0 -1rem;
        padding: 0 1rem;
        background: $primary-darkest;

        &.open {
            display: block;
        }
    }

    .nav--utility {
        background: $primary-darker;
    }

    .nav--main {
        background: $primary-light;

        .child-menu {
            background: mix(black, $primary-light, 10%);
        }
    }


    &.open {
        display: block;
    }
}

